# LLM-Tester

./: .gitignore  HamsterN-LLMTester.spec  LICENSE  README.md  RELEASE_NOTES.md  launcher.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
resources/test_cases/: advanced_test.json  basic_test.json  test_format.json
src/: __init__.py  main.py
src/api/: __init__.py  ollama_client.py
src/core/: __init__.py  test_manager.py
src/ui/: main_window.py
