[project]
name = "hamstern-llm-tester"
version = "0.1.0-beta"
description = "A GUI tool for testing and evaluating LLM models through Ollama"
authors = [
    {name = "HamsterN Team"}
]
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
